[gd_scene load_steps=5 format=3 uid="uid://brcmhd3j62xb6"]

[ext_resource type="Script" uid="uid://cfwqrmrl8t1ob" path="res://scripts/main_menu.gd" id="1_1q67n"]
[ext_resource type="Texture2D" uid="uid://pe7a4weirj2g" path="res://textures/dark.png" id="2_bl2xt"]
[ext_resource type="AudioStream" uid="uid://b08h6bm5pit7q" path="res://Audio/lightswitch2.wav" id="3_yy7ei"]
[ext_resource type="Theme" uid="uid://30kh5fc6q7p8" path="res://UI/ui_theme.tres" id="4_b7uiw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1q67n")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(1000, 0)
autoscroll = Vector2(100, 0)
repeat_times = 2
follow_viewport = false

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(1150, 324)
texture = ExtResource("2_bl2xt")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yy7ei")
volume_db = -16.0

[node name="Timer" type="Timer" parent="AudioStreamPlayer"]
wait_time = 0.25

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -61.0
offset_right = 132.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="Main"]
layout_mode = 2
theme = ExtResource("4_b7uiw")
text = "START"

[node name="Multiplayer" type="Button" parent="Main"]
layout_mode = 2
theme = ExtResource("4_b7uiw")
text = "MULTIPLAYER"

[node name="Options" type="Button" parent="Main"]
layout_mode = 2
theme = ExtResource("4_b7uiw")
text = "OPTIONS"

[node name="Exit" type="Button" parent="Main"]
layout_mode = 2
theme = ExtResource("4_b7uiw")
text = "EXIT"

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0
switch_on_hover = false

[node name="MenuButton" type="MenuButton" parent="MenuBar"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 159.0
offset_bottom = 43.0
theme = ExtResource("4_b7uiw")
text = "Options"
flat = false
item_count = 2
popup/item_0/text = "Test"
popup/item_0/checkable = 2
popup/item_0/id = 0
popup/item_1/text = "Test 2"
popup/item_1/checkable = 2
popup/item_1/id = 1

[connection signal="timeout" from="AudioStreamPlayer/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Main/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Main/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main/Exit" to="." method="_on_exit_pressed"]
